--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,69 @@
 body {
-  background-color: #edcfa3;
+  background-color: #edcfa3d2;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+a {
+  color: #754d0c;
+}
+
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
+h1 {
+  text-align: center;
+  font-weight: 800;
+  font-size: 34px;
+  line-height: 1.5;
+  color: #221e19;
+}
+
+header {
+  margin-bottom: 30px;
+}
+
+form {
+  padding: 30px;
+  background-color: #fcefda;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.08);
+  display: flex;
+  margin-bottom: 18px;
+}
+
+.intext {
+  padding: 16px;
+  border: 3px solid #53493c;
+  width: 80%;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 20px;
+}
+
+.btn {
+  margin-left: 10px;
+  background-color: #221e19;
+  color: #edcfa3d2;
+  border: none;
+  border-radius: 50px;
+  padding: 14px 24px;
+  width: 150px;
+  font-size: 16px;
+}
+
+.poem {
+  font-size: 16px;
+  background-color: #fcefda;
+  padding: 20px;
+  line-height: 2;
+  border-left: 3px solid #221e19;
+}
+
+footer {
+  text-align: center;
+  font-size: 13px;
+  margin-top: 30px;
 }
