--- a/src/styles.css
+++ b/src/styles.css
@@ -26,12 +26,22 @@ header {
 }
 
 form {
-  padding: 30px;
-  background-color: #fcefda;
-  border-radius: 10px;
-  box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.08);
   display: flex;
+}
+
+.form-container {
+  background-color: #fcefda;
   margin-bottom: 18px;
+  border-radius: 10px;
+  padding: 15px 20px;
+  box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.08);
+}
+
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  opacity: 0.6;
+  font-size: 12px;
 }
 
 .intext {
@@ -60,6 +70,10 @@ form {
   padding: 20px;
   line-height: 2;
   border-left: 3px solid #221e19;
+}
+
+.hidden {
+  display: none;
 }
 
 footer {
